<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.gangelov</groupId>
    <artifactId>photon</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <kotlin.version>1.7.21</kotlin.version>
        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
    </properties>

    <build>
        <plugins>
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-dependency-plugin</artifactId>-->
<!--                <version>2.10</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>copy</id>-->
<!--                        <phase>process-test-classes</phase>-->
<!--                        <goals>-->
<!--                            <goal>copy</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <artifactItems>-->
<!--                                <artifactItem>-->
<!--                                    <groupId>org.graalvm.truffle</groupId>-->
<!--                                    <artifactId>truffle-api</artifactId>-->
<!--                                    <version>22.3.0</version>-->
<!--                                    <type>jar</type>-->
<!--                                    <overWrite>true</overWrite>-->
<!--                                    <destFileName>truffle-api.jar</destFileName>-->
<!--                                </artifactItem>-->
<!--                            </artifactItems>-->
<!--                            <outputDirectory>${jar.dir}</outputDirectory>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-shade-plugin</artifactId>-->
<!--                <version>3.1.1</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <phase>package</phase>-->
<!--                        <goals>-->
<!--                            <goal>shade</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <finalName>simplelanguage</finalName>-->
<!--                            <artifactSet>-->
<!--                                <excludes>-->
<!--                                    <exclude>org.graalvm.truffle:truffle-api</exclude>-->
<!--                                    <exclude>org.graalvm.truffle:truffle-dsl-processor</exclude>-->
<!--                                    <exclude>org.graalvm.truffle:truffle-tck</exclude>-->
<!--                                    <exclude>org.graalvm:graal-sdk</exclude>-->
<!--                                </excludes>-->
<!--                            </artifactSet>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <compileSourceRoots>
                                <compileSourceRoot>src/main/java</compileSourceRoot>
                                <compileSourceRoot>target/generated-sources/kapt/compile</compileSourceRoot>
                            </compileSourceRoots>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.frame=ALL-UNNAMED</arg>
                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED</arg>
                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.library=ALL-UNNAMED</arg>
                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED</arg>
                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.dsl=ALL-UNNAMED</arg>
                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.utilities=ALL-UNNAMED</arg>
                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>kapt</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>kapt</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <sourceDir>target/generated-sources/kapt/compile</sourceDir>
                                <sourceDir>src/main/kotlin</sourceDir>
                            </sourceDirs>
                            <annotationProcessorPaths>
                                <!-- Specify your annotation processors here. -->
                                <annotationProcessorPath>
                                    <groupId>com.google.auto.service</groupId>
                                    <artifactId>auto-service</artifactId>
                                    <version>1.0-rc4</version>
                                </annotationProcessorPath>
                            </annotationProcessorPaths>
                        </configuration>
                    </execution>

                    <execution>
                        <id>compile</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <source>target/generated-sources/kapt/compile</source>
                                <source>src/main/kotlin</source>
                            </sourceDirs>
                        </configuration>
                    </execution>

                    <execution>
                        <id>test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <source>src/test/kotlin</source>
                            </sourceDirs>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <jvmTarget>17</jvmTarget>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.1</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.graalvm.truffle</groupId>
            <artifactId>truffle-api</artifactId>
            <version>22.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.graalvm.truffle</groupId>
            <artifactId>truffle-dsl-processor</artifactId>
            <version>22.3.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.graalvm.truffle</groupId>
            <artifactId>truffle-tck</artifactId>
            <version>22.3.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test-junit5</artifactId>
            <version>${kotlin.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>